@@ -761,6 +761,9 @@ NOTE: Use the "system-sensors" command to see what sensors are available for mon
 <h2>Toggle Screensaver</h2>
 <p>This module toggles the system's screensaver while the Phoronix Test Suite is running. At this time, the GNOME and KDE screensavers are supported.</p>
 <p>This module utilizes the following environmental variables: HALT_SCREENSAVER.</p>
+<h2>Linux Turbostat Dumper</h2>
+<p>Setting TURBOSTAT_LOG_DIR=_DIR_ will auto-load and enable this Phoronix Test Suite module. The module will -- if turbostat is installed on the system and the user is root -- allow dumping of the TurboStat data to the specified directly on a per-test basis. This allows easily collecting of turbostat logs for each test being run.</p>
+<p>This module utilizes the following environmental variables: TURBOSTAT_LOG_DIR.</p>
 <h2>Update Checker</h2>
 <p>This module checks to see if the Phoronix Test Suite -- and its tests and suites -- are up to date plus also handles message of the day information.</p>
 <h2>Utilize Wine On Linux Benchmarking</h2>
